add_subdirectory(ReadCondition)
add_subdirectory(FooType3Unbounded)
add_subdirectory(Reconnect)
add_subdirectory(SetQosPartition)
add_subdirectory(ConfigFile)
add_subdirectory(Rejects)
add_subdirectory(RecorderReplayer)
add_subdirectory(BidirMessenger)
add_subdirectory(RtpsMessages)
add_subdirectory(Reliability)
add_subdirectory(PubScalability)
add_subdirectory(LargeSample)
add_subdirectory(SetQosDeadline)
add_subdirectory(Ownership)
add_subdirectory(Prst_delayed_subscriber)
add_subdirectory(QueryCondition)
add_subdirectory(Serializer_wstring)
add_subdirectory(TestFramework)
add_subdirectory(RtpsDiscovery)
add_subdirectory(FooType5)
add_subdirectory(DCPSInfoRepo)
add_subdirectory(TransientLocalTest)
add_subdirectory(Compiler)
add_subdirectory(Priority)
add_subdirectory(LatencyBudget)
add_subdirectory(ManualAssertLiveliness)
add_subdirectory(CorbaSeq)
add_subdirectory(ManyToMany)
add_subdirectory(ZeroCopyDataReaderListener)
add_subdirectory(MultiDPTest)
add_subdirectory(ContentFilteredTopic)
add_subdirectory(Partition)
add_subdirectory(MultiTopic)
add_subdirectory(FooType4)
add_subdirectory(Instances)
add_subdirectory(FooType)
add_subdirectory(Presentation)
add_subdirectory(unit)
add_subdirectory(FooTest5_0)
add_subdirectory(SharedTransport)
add_subdirectory(Federation)
add_subdirectory(GroupPresentation)
add_subdirectory(GuardCondition)
add_subdirectory(WaitForAck)
add_subdirectory(ManyTopicTypes)
add_subdirectory(MultiDiscovery)
add_subdirectory(StaticDiscovery)
add_subdirectory(PersistentDurability)
add_subdirectory(common)
add_subdirectory(QoS_XML)
add_subdirectory(TopicExpression)
add_subdirectory(BuiltInTopic)
add_subdirectory(MetaStruct)
add_subdirectory(Footprint)
add_subdirectory(RegisterInstance)
add_subdirectory(sub_init_loop)
add_subdirectory(FooType3NoKey)
add_subdirectory(FooTest4)
add_subdirectory(TopicReuse)
add_subdirectory(StaticDiscoveryReconnect)
add_subdirectory(KeyTest)
add_subdirectory(FileSystemStorage)
add_subdirectory(SimpleFooTest)
add_subdirectory(RtiSerialization)
add_subdirectory(SubscriberCycle)
add_subdirectory(Dispose)
add_subdirectory(TransientDurability)
add_subdirectory(ManyTopicTest)
add_subdirectory(FooType3)
add_subdirectory(BuiltInTopicTest)
add_subdirectory(DestinationOrder)
add_subdirectory(ViewState)
add_subdirectory(MultiRepoTest)
add_subdirectory(Inconsistent_Qos)
add_subdirectory(Serializer)
add_subdirectory(NotifyTest)
add_subdirectory(Monitor)
add_subdirectory(StringKey)
add_subdirectory(FooTest5)
add_subdirectory(CompatibilityTest)
add_subdirectory(Messenger)
add_subdirectory(Deadline)
add_subdirectory(TcpReconnect)
add_subdirectory(DPFactoryQos)
add_subdirectory(StatusCondition)
add_subdirectory(DpShutdown)
add_subdirectory(FooTest3_2)
add_subdirectory(ZeroCopyRead)
add_subdirectory(UnitTests)
add_subdirectory(WriteDataContainer)
add_subdirectory(FilterExpression)
add_subdirectory(Lifespan)
add_subdirectory(ManyTopicMultiProcess)
add_subdirectory(TimeBasedFilter)
add_subdirectory(LivelinessTimeout)
add_subdirectory(PersistentInfoRepo)
add_subdirectory(DcpsIntegration)
add_subdirectory(ReaderDataLifecycle)
add_subdirectory(LivelinessTest)
add_subdirectory(Thrasher)
add_subdirectory(ConfigTransports)
add_subdirectory(FooTest4_0)
add_subdirectory(FooTest3_0)
