add_subdirectory(unit)
add_subdirectory(StringKey)
add_subdirectory(FilterExpression)
add_subdirectory(Reliability)
add_subdirectory(FooType4)
add_subdirectory(Messenger)
add_subdirectory(BuiltInTopicTest)
add_subdirectory(PersistentDurability)
add_subdirectory(FooTest5_0)
add_subdirectory(LargeSample)
add_subdirectory(DPFactoryQos)
add_subdirectory(BuiltInTopic)
add_subdirectory(common)
add_subdirectory(PersistentInfoRepo)
add_subdirectory(ConfigTransports)
add_subdirectory(SetQosDeadline)
add_subdirectory(DpShutdown)
add_subdirectory(SetQosPartition)
add_subdirectory(CorbaSeq)
add_subdirectory(LatencyBudget)
add_subdirectory(FooType5)
add_subdirectory(RtiSerialization)
add_subdirectory(LivelinessTimeout)
add_subdirectory(Compiler)
add_subdirectory(TcpReconnect)
add_subdirectory(PubScalability)
add_subdirectory(Deadline)
add_subdirectory(BidirMessenger)
add_subdirectory(GroupPresentation)
add_subdirectory(ConfigFile)
add_subdirectory(Monitor)
add_subdirectory(RecorderReplayer)
add_subdirectory(TransientLocalTest)
add_subdirectory(ViewState)
add_subdirectory(ZeroCopyRead)
add_subdirectory(UnitTests)
add_subdirectory(Priority)
add_subdirectory(CompatibilityTest)
add_subdirectory(QueryCondition)
add_subdirectory(Footprint)
add_subdirectory(ManyTopicTypes)
add_subdirectory(FooTest4)
add_subdirectory(FooType3)
add_subdirectory(WriteDataContainer)
add_subdirectory(KeyTest)
add_subdirectory(Inconsistent_Qos)
add_subdirectory(TestFramework)
add_subdirectory(Serializer)
add_subdirectory(StaticDiscovery)
add_subdirectory(FooType3Unbounded)
add_subdirectory(MultiTopic)
add_subdirectory(NotifyTest)
add_subdirectory(TransientDurability)
add_subdirectory(TopicExpression)
add_subdirectory(ContentFilteredTopic)
add_subdirectory(Instances)
add_subdirectory(FooType3NoKey)
add_subdirectory(DCPSInfoRepo)
add_subdirectory(Rejects)
add_subdirectory(ManualAssertLiveliness)
add_subdirectory(Reconnect)
add_subdirectory(StaticDiscoveryReconnect)
add_subdirectory(ManyTopicMultiProcess)
add_subdirectory(sub_init_loop)
add_subdirectory(FileSystemStorage)
add_subdirectory(FooType)
add_subdirectory(Partition)
add_subdirectory(MultiRepoTest)
add_subdirectory(MultiDiscovery)
add_subdirectory(StatusCondition)
add_subdirectory(ZeroCopyDataReaderListener)
add_subdirectory(RtpsMessages)
add_subdirectory(SubscriberCycle)
add_subdirectory(FooTest4_0)
add_subdirectory(FooTest5)
add_subdirectory(ManyToMany)
add_subdirectory(Lifespan)
add_subdirectory(RtpsDiscovery)
add_subdirectory(WaitForAck)
add_subdirectory(GuardCondition)
add_subdirectory(Federation)
add_subdirectory(Prst_delayed_subscriber)
add_subdirectory(Serializer_wstring)
add_subdirectory(MetaStruct)
add_subdirectory(TopicReuse)
add_subdirectory(ReadCondition)
add_subdirectory(QoS_XML)
add_subdirectory(Ownership)
add_subdirectory(LivelinessTest)
add_subdirectory(DcpsIntegration)
add_subdirectory(SharedTransport)
add_subdirectory(FooTest3_2)
add_subdirectory(MultiDPTest)
add_subdirectory(SimpleFooTest)
add_subdirectory(Dispose)
add_subdirectory(ReaderDataLifecycle)
add_subdirectory(FooTest3_0)
add_subdirectory(ManyTopicTest)
add_subdirectory(Presentation)
add_subdirectory(DestinationOrder)
add_subdirectory(TimeBasedFilter)
add_subdirectory(RegisterInstance)
add_subdirectory(Thrasher)
