
project(FACE CXX)
cmake_minimum_required(VERSION 3.1)

if (NOT DDS_ROOT)
  find_package(OpenDDS REQUIRED CONFIG)
endif()
add_subdirectory(Conformance)
add_subdirectory(Compiler)
add_subdirectory(MultiDomainMessenger)
add_subdirectory(Header)
add_subdirectory(Partition)
add_subdirectory(Unit)
add_subdirectory(Messenger)
add_subdirectory(CallbackAndReceive)
add_subdirectory(GetConnectionParameters)
add_subdirectory(Reliability)
