
project(FACE CXX)
cmake_minimum_required(VERSION 3.3)

if (NOT DDS_ROOT)
  find_package(OpenDDS REQUIRED CONFIG)
endif()
add_subdirectory(Compiler)
add_subdirectory(Header)
add_subdirectory(Conformance)
add_subdirectory(Messenger)
add_subdirectory(MultiDomainMessenger)
add_subdirectory(GetConnectionParameters)
add_subdirectory(Partition)
add_subdirectory(Reliability)
add_subdirectory(Unit)
add_subdirectory(CallbackAndReceive)
